all programs support the params --help and --version in a GNU compliant way, and some technical improvements

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,7 @@
-4.3.2
+4.3.2 (aug 2006)
+- all programs support --help and --version in a GNU compatible way
+- cgiquiz: from a browser use .../cgiquiz/--help
+- bugfix: diaquiz supports --help again
 - cgiquiz: methods GET and POST are both supported now + optimizations
 - CSS: background->background-color
 4.3.1
