--- a/doc/deutsch/grquiz.1
+++ b/doc/deutsch/grquiz.1
@@ -10,7 +10,9 @@ grquiz \- grafisches Quiz-Programm
 .SH SYNTAX
 .BI "grquiz [" Optionen "] [" "Eingabedatei" "]"
 .br
-.BI "grquiz [" -h | --help | /? ]
+.BI "grquiz [" --help | -h | /? ]
+.br
+.BI "grquiz " --version
 
 .SH BESCHREIBUNG
 
