--- a/doc/deutsch/gtkquizchooser.1
+++ b/doc/deutsch/gtkquizchooser.1
@@ -9,7 +9,9 @@ gtkquizchooser \- Quiz-Auswähler Skript für AKFQuiz
 .SH SYNTAX
 .BI "gtkquizchooser [" Optionen "] " "Quizprogram"
 .br
-.BI "gtkquizchooser [" -h | --help | /? ]
+.BI "gtkquizchooser [" --help | -h | /? ]
+.br
+.BI "gtkquizchooser " --version
 
 .SH DESCRIPTION
 
