--- a/doc/deutsch/linequiz.1
+++ b/doc/deutsch/linequiz.1
@@ -10,7 +10,9 @@ linequiz \- Zeilen-orientiertes Quiz-Programm
 .SH SYNTAX
 .BI "linequiz [" Optionen "] [" "Eingabedatei" "]"
 .br
-.BI "linequiz [" -h | --help | /? ]
+.BI "linequiz [" --help | -h | /? ]
+.br
+.BI "linequiz " --version
 
 .SH BESCHREIBUNG
 
