--- a/doc/deutsch/mkquiz.1
+++ b/doc/deutsch/mkquiz.1
@@ -10,7 +10,9 @@ mkquiz \- erzeugt HTML Dateien mit einem Quiz für akfquiz4.js
 .SH SYNTAX
 .BI "mkquiz [" "Optionen" "] [" "Quiz-Dateien" "]"
 .br
-.BI "mkquiz [" -h | --help | /? ]
+.BI "mkquiz [" --help | -h | /? ]
+.br
+.BI "mkquiz " --version
 
 .SH BESCHREIBUNG
 
