--- a/doc/deutsch/scrquiz.1
+++ b/doc/deutsch/scrquiz.1
@@ -10,7 +10,9 @@ scrquiz \- Quiz-Programm für die Text-Konsole oder xterm
 .SH SYNTAX
 .BI "scrquiz [" Optionen "] [" "Eingabedatei" "]"
 .br
-.BI "scrquiz [" -h | --help | /? ]
+.BI "scrquiz [" --help | -h | /? ]
+.br
+.BI "scrquiz " --version
 
 .SH BESCHREIBUNG
 
