--- a/doc/english/grquiz.1
+++ b/doc/english/grquiz.1
@@ -10,6 +10,8 @@ grquiz \- graphical Quiz-program
 .BI "grquiz [" options "] [" "input file" "]"
 .br
 .BI "grquiz [" -h | --help | /? ]
+.br
+.BI "grquiz " --version
 
 .SH DESCRIPTION
 
