--- a/doc/english/gtkquizchooser.1
+++ b/doc/english/gtkquizchooser.1
@@ -9,7 +9,9 @@ gtkquizchooser \- file-chooser script for AKFQuiz
 .SH SYNTAX
 .BI "gtkquizchooser [" options "] " "program"
 .br
-.BI "gtkquizchooser [" -h | --help | /? ]
+.BI "gtkquizchooser [" --help | -h | /? ]
+.br
+.BI "gtkquizchooser " --version
 
 .SH DESCRIPTION
 
