--- a/doc/english/linequiz.1
+++ b/doc/english/linequiz.1
@@ -9,7 +9,9 @@ linequiz \- command-line quiz-program
 .SH SYNTAX
 .BI "linequiz [" options "] [" "input file" "]"
 .br
-.BI "linequiz [" -h | --help | /? ]
+.BI "linequiz [" --help | -h | /? ]
+.br
+.BI "linequiz " --version
 
 .SH DESCRIPTION
 
