--- a/doc/english/mkquiz.1
+++ b/doc/english/mkquiz.1
@@ -9,7 +9,9 @@ mkquiz \- creates HTML file with a quiz (needs akfquiz5.js)
 .SH SYNTAX
 .BI "mkquiz [" "options" "] [" "quiz-files" "]"
 .br
-.BI "mkquiz [" -h | --help | /? ]
+.BI "mkquiz [" --help | -h | /? ]
+.br
+.BI "mkquiz " --version
 
 .SH DESCRIPTION
 
