--- a/doc/english/scrquiz.1
+++ b/doc/english/scrquiz.1
@@ -9,7 +9,9 @@ scrquiz \- Quiz-program for the text-terminal or xterm
 .SH SYNTAX
 .BI "scrquiz [" options "] [" "input file" "]"
 .br
-.BI "scrquiz [" -h | --help | /? ]
+.BI "scrquiz [" --help | -h | /? ]
+.br
+.BI "scrquiz " --version
 
 .SH DESCRIPTION
 
