--- a/doc/deutsch/INSTALL
+++ b/doc/deutsch/INSTALL
@@ -60,7 +60,7 @@ gtkquizchooser kann mit GPC ebenfalls nicht kompiliert werden.
 Wechseln Sie in das neu erstellte Verzeichnis akfquiz/ und geben Sie 
 folgendes ein:
 
-  ./configure --target=gpc
+  ./configure --with-gpc
   make
   make clean
 
@@ -74,16 +74,16 @@ Das Skript "configure" akzeptiert die folgenden Parameter:
 --prefix=   wohin installiert werden soll
 --cgipath=  wohin das CGI Programm installiert werden soll
 --variant=  Name der Variante
---target=   Compiler-Ziel  [*]
+--with-*    Compiler  [*]
 --arch=     CPU-Architektur (nur ein Name für die Paket-Benennung)
 --sys=      System (nur ein Name für die Paket-Benennung)
 
-[*] Das Ziel (target) kann folgendes sein:
-fpc  - Free Pascal 2.0 oder besser
-gpc  - GNU Pascal 20030303 oder besser
-xarm - Free Pascal Cross-Compiler für Linux auf ARM Prozessoren
-xw32 - Free Pascal Cross-Compiler für Windows
-       (nicht verwenden, wenn Sie direkt unter Windows kompilieren)
+[*] Als Compiler kann folgendes angegeben werden:
+--with-fpc  - Free Pascal 2.0 oder besser
+--with-gpc  - GNU Pascal 20030303 oder besser
+--with-xarm - Free Pascal Cross-Compiler für Linux auf ARM Prozessoren
+--with-xw32 - Free Pascal Cross-Compiler für Windows
+              (nicht verwenden, wenn Sie direkt unter Windows kompilieren)
 
 
 Windows-Benutzer:
