--- a/doc/deutsch/akfquiz.5
+++ b/doc/deutsch/akfquiz.5
@@ -84,7 +84,7 @@ oder
 .I mailto:akfquiz@akfoerster.de
 
 .IP "Bearbeitet: (edited:)"
-Liste von Leuten, die die Quizdatei überarbeitet haben
+Liste von Leuten, die die Quiz-Datei überarbeitet haben
 
 .IP "Copyright:"
 derjenige, der das Copyright bzw. Urheberrecht inne hat. Dieses 
@@ -109,7 +109,7 @@ der Übersetzer, falls es sich um eine Übersetzung handelt
 welche Zeichensatz-Kodierung verwendet wird. 
 (Der Zeichensatz ist nicht die Schriftart!)
 Die Vorgabe ist US-ASCII und Zeichen, die nicht in ASCII vorkommen 
-(zB. deutsche Umlaute) werden herausgefiltert.
+(zB. deutsche Umlaute) werden heraus gefiltert.
 
 Unterstützt: UTF-8, ISO-8859-1, ISO-8859-15, IBM850, 
 US-ASCII, Windows-1252
@@ -130,11 +130,11 @@ Schirokesen).
 Unterstützte Sprachen: en, de, da, it
 
 .IP rtl:
-kann man auf "ja", "yes", "true" oder "1" setzen. Es bedeuted, dass die 
+kann man auf "ja", "yes", "true" oder "1" setzen. Es bedeutet, dass die 
 Schreibrichtung des Haupttextes von rechts nach links verläuft, 
 zB. für Hebräisch oder Arabisch.
 
-.B Experimentelle Unterstüzung
+.B Experimentelle Unterstützung
 
 .IP bidi:
 Bidi steht für "bidirectional" (sinngemäß: 2 Schreibrichtungen)
@@ -142,7 +142,7 @@ Man kann es auf "ja", "yes", "true" oder "1" setzen.
 Das bedeutet, der Text kann Textstellen enthalten, die eine andere 
 Schreibrichtung haben, als der Haupttext.
 
-.B Experimentelle Unterstüzung
+.B Experimentelle Unterstützung
 
 .IP Neutral:
 kann man auf "ja", "yes", "true" oder "1" setzen, was bedeutet, dass 
@@ -320,7 +320,7 @@ Der Inhalt beim Stichwort "Auswertung%:" ist ähnlich aufgebaut, wie
 die Antworten bei einer Frage; zuerst ein Zahlwert, dann beliebig viele 
 Leerzeichen oder Tab-Zeichen und dann ein Text. Längere Zeilen können 
 auch hier mit einem Backslash (\\) erweitert werden. Der Zahlenwert 
-stellt hier jedoch den Prozentwert dar, ab welchem der angegebe Text 
+stellt hier jedoch den Prozentwert dar, ab welchem der angegebene Text 
 als Auswertung gilt.
 .B Achtung:
 Die Zahlwerte müssen in absteigender Folge angegeben werden und der 
