--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,7 @@
 4.3.2
+- SDL4Freepascal not needed anymore
+- grquiz: libSDL usable with gpc (GRX still also supported)
+- cgiquiz, mkquiz: change index format to <ul>
 - cgiquiz: a trailing slash can be ommited (but that's not recommended!)
 - all programs support --help and --version in a GNU compatible way
 - cgiquiz: from a browser use .../cgiquiz/--help
