--- a/doc/english/INSTALL
+++ b/doc/english/INSTALL
@@ -35,11 +35,11 @@ the programs yourself.
 
 Compiling with Free Pascal (FPC) 2.0.0 or newer:
 
-You need the main package and SDL4Freepascal-1.2.0.0. SDL-1.2 has to be 
-installed on your system.
+You need the main package and SDL-1.2 has to be  installed on your 
+system.
 
-Unpack the main packackage and SDL4Freepascal in the same directory.
-Go into the newly created directory akfquiz/ and type
+Unpack the main packackage. Go into the newly created directory 
+akfquiz/ and type
 
   ./configure
   make 
@@ -50,16 +50,19 @@ After that, it is ready to use, as described above.
 
 Compiling with GNU Pascal (GPC) 20030303 or newer.
 
-To compile grquiz with GPC, the GRX library with GPC support enabled 
-must be installed. When grquiz cannot be compiled, that error is 
-ignored in the Makefile. The program gtkquizchooser cannot be compiled 
-with GPC either.
+To compile grquiz with GPC, either the libSDL-1.2 or the GRX library 
+with GPC support enabled must be installed. 
+When grquiz cannot be compiled, that error is ignored in the Makefile. 
+The program gtkquizchooser cannot be compiled with GPC.
 
 type
 
   ./configure --with-gpc
   make 
   make clean
+
+If you have the GRX library installed, you should enter
+"./configure --with-grx", but libSDL should be preferred.
 
 After that, it is ready to use, as described above.
 
@@ -77,7 +80,8 @@ The configure script accepts the following parameters:
 
 [*] the compiler may be
 --with-fpc  - Free Pascal 2.0 or newer
---with-gpc  - GNU Pascal 20030303 or newer
+--with-gpc  - GNU Pascal 20030303 or newer with libSDL
+--with-grx  - GNU Pascal 20030303 or newer with GRX
 --with-xarm - Free Pascal Cross-Compiler for Linux on ARM
 --with-xw32 - Free Pascal Cross-Compiler for Windows 
               (don't use it directly on Windows)
@@ -101,7 +105,7 @@ gtkquizchooser - file-chooser for quiz-files
 getquiz	       - fetches all files needed for the HTML files and 
                  copies them to the current directory
 
-[1] grquiz can be compiled for differen libraries.
+[1] grquiz can be compiled for different libraries.
     To use it with SVGALIB it must be installed setuid root.
 [2] linequiz is meant as backend program
 
