--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,4 +1,5 @@
 4.3.2
+- bugfix: Maxpoitnts=0 (surveys) handled correctly
 - grquiz: non breaking space not visible anymore
 - SDL4Freepascal not needed anymore
 - grquiz: libSDL usable with gpc (GRX still also supported)
