keyword: encoding, Kodierung

--- a/doc/deutsch/akfquiz.5
+++ b/doc/deutsch/akfquiz.5
@@ -105,7 +105,7 @@ bezieht.
 .IP "Uebersetzer: (translator:)"
 der Übersetzer, falls es sich um eine Übersetzung handelt
 
-.IP "Zeichensatz: (charset:)"
+.IP "Kodierung: (encoding:)"
 welche Zeichensatz-Kodierung verwendet wird. 
 (Der Zeichensatz ist nicht die Schriftart!)
 Die Vorgabe ist US-ASCII und Zeichen, die nicht in ASCII vorkommen 
