--- a/doc/english/akfquiz.5
+++ b/doc/english/akfquiz.5
@@ -99,12 +99,12 @@ A link to the license text or an URN which refers to the license.
 .IP translator:
 the translator, if it is a translation.
 
-.IP charset:
+.IP encoding:
 Which charset encoding is used. (The charset is not the font!)
 The default is US-ASCII any non-ASCII character is filtered out.
 
-supported: UTF-8, ISO-8859-1, ISO-8859-15, IBM850, Windows-1252, 
-US-ASCII
+supported: UTF-8, ISO-8859-1...-15, IBM850, Windows-1252, US-ASCII 
+and others
 
 (use IBM850 instead of IBM437 to avoid trouble)
 
