--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -4,6 +4,7 @@
 - cgiquiz: new exam-mode
 - cgiquiz: graphics and some stylesheets included (easier setup)
 - cgiquiz: graphics are prefetched if the browser supports it
+- cgiquiz: there is an icon for every page now
 - removed gtkquizchooser and wquizchooser
 - bugfix: Maxpoitnts=0 (surveys) handled correctly
 - grquiz: non breaking space not visible anymore
