--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -2,6 +2,8 @@
 - usage of CVS-Id information
 - new keywords "encoding:", "Kodierung:" replace "charset:", "Zeichensatz:"
 - cgiquiz: new exam-mode
+- cgiquiz: normal mode uses GET method
+- cgiquiz: supports HEAD method
 - cgiquiz: graphics and some stylesheets included (easier setup)
 - cgiquiz: graphics are prefetched if the browser supports it
 - cgiquiz: there is an icon for every page now
