--- a/doc/deutsch/akfquiz.5
+++ b/doc/deutsch/akfquiz.5
@@ -407,14 +407,13 @@ Danach kann man das Ausführungs-Bit der Datei mit dem Befehl
 setzen.
 
 Als MIME-Typ sollte 
-.IR application/x-akfquiz " verwendet werden."
+.I application/x-akfquiz
+verwendet werden.
 
 
 .SH LIZENZ
 
 Copyright \(co 2003-2006 Andreas K. Förster 
-.br
-.RI < akfquiz@akfoerster.de >
 
 AKFQuiz ist Freie Software. Sie können es unter den 
 Bedingungen der GNU General Public License, wie von der Free 
@@ -432,18 +431,7 @@ oder der
 
 .SH INTERNET
 
-.IP Kontakt:
-mailto:akfquiz@akfoerster.de
-
-.IP Homepage:
-http://akfoerster.de/akfquiz/de
-
-.IP Beispiele:
-http://akfoerster.de/akfquiz/quiz.html
-
-.IP "Quiz veröffentlichen:"
-http://akfoerster.de/akfquiz/quizupload
-(keine Garantie!)
+http://akfquiz.nongnu.org/
 
 
 .SH "SIEHE AUCH"
