--- a/doc/deutsch/cgiquiz.8
+++ b/doc/deutsch/cgiquiz.8
@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tlatin1 akfquiz.cgi.8
 .\"
-.TH "cgiquiz" 8 "4.2.0" AKFQuiz
+.TH "cgiquiz" 8 "4.3.2" AKFQuiz
 
 .SS NAME
 cgiquiz \- CGI program for using AKFQuiz-files
@@ -17,9 +17,9 @@ cgiquiz \- CGI program for using AKFQuiz-files
 .BI cgiquiz " --version"
 
 .SS Browser:
-.BI "http://" "example.org/" "cgi-bin/cgiquiz" "/--help"
+.BI "http://" "example.org/" "cgi-bin/cgiquiz" "?--help"
 .br
-.BI "http://" "example.org/" "cgi-bin/cgiquiz" "/--version"
+.BI "http://" "example.org/" "cgi-bin/cgiquiz" "?--version"
 .br
 .BI "http://" "example.org/" "cgi-bin/cgiquiz" "/quizpath/"
 .br
@@ -30,12 +30,6 @@ cgiquiz \- CGI program for using AKFQuiz-files
 .SH DESCRIPTION
 
 cgiquiz lets you use a quiz from an easy to write text-file.
-
-It needs also the files "richtig.png" and "falsch.png", and probably a given 
-CSS file. These files have to be either in the same directory as the 
-AKFQuiz-file, or you can use the keyword
-.I baseURI
-in the quiz-file.
 
 The format of the input file is described in 
 .IR akfquiz (5).
@@ -106,8 +100,6 @@ For example:
 or
 .br
 .I http://example.org/cgi-bin/cgiquiz/~user/
-.br
-You must not leave the trailing "/" away.
 
 .SH DIAGNOSTICS
 
@@ -115,7 +107,7 @@ You must not leave the trailing "/" away.
 
 The program should even then always produce correct HTML code.
 Error messages are written into the code. So you can easily find the 
-position of the errors, by looking at the result with a browser.
+position of the errors by looking at the result with a browser.
 
 If the program cannot interpret the input data at all, it outputs 
 nothing, or it creates an empty file.
@@ -132,7 +124,8 @@ The code contains the language as given with the keyword "language:".
 This also has technical relevancy, so don't simply skip this keyword.
 Besides of that, the author is stored in a way, that it can be easily 
 found by software programs (for example search-engines). Also the 
-name of the software which created the file and version is stored.
+name of the software which created the file and version is stored and a 
+link to the homepage.
 
 .SH SECURITY
 
@@ -145,27 +138,11 @@ the automatic indexer doesn't show any subdirectories.
 The environment variable QUIZPATH as used by the other parts of AKFQuiz 
 has no influence on the CGI program.
 
-This program doesn't execute any external programs and it doesn't 
-write anything to disk. It only reads the file or directory given in 
-the URI.
-
-.SH FILES
-
-The following files must be in the same directory as the quizfile:
-
-.IP "richtig.png, falsch.png"
-needed graphic-files
-.P
-
-If you mentioned a CSS-file in the quizfile, it also has to be in the 
-same directory. It might be, that this CSS-file again needs other 
-files.
+This program doesn't execute any external programs. 
 
 .SH LICENSE
 
 Copyright \(co 2005-2006 Andreas K. Foerster
-.br
-.RI < akfquiz@akfoerster.de >
 
 AKFQuiz is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -180,18 +157,7 @@ GNU General Public License for more details.
 
 .SH INTERNET
 
-.IP contact:
-mailto:akfquiz@akfoerster.de
-
-.IP homepage:
-http://akfoerster.de/akfquiz/
-
-.IP examples:
-http://akfoerster.de/akfquiz/quiz.html
-
-.IP "publish quiz:"
-http://akfoerster.de/akfquiz/quizupload
-(no guaranty!)
+http://akfquiz.nongnu.org/
 
 
 .SH "SEE ALSO"
