--- a/doc/english/akfquiz.5
+++ b/doc/english/akfquiz.5
@@ -100,13 +100,16 @@ A link to the license text or an URN which refers to the license.
 the translator, if it is a translation.
 
 .IP encoding:
-Which charset encoding is used. (The charset is not the font!)
+Which charset-encoding is used.
 The default is US-ASCII any non-ASCII character is filtered out.
 
 supported: UTF-8, ISO-8859-1...-15, IBM850, Windows-1252, US-ASCII 
 and others
 
 (use IBM850 instead of IBM437 to avoid trouble)
+
+.IP charset:
+obsolete; should not be used anymore
 
 .IP language:
 The language should be given in the usual two-letter abbreviation as 
@@ -347,15 +350,15 @@ versions.
 
 .SS Examples:
 
-http://akfoerster.de/akfquiz/
+http://akfquiz.nongnu.org/
 .br
-<http://akfoerster.de/akfquiz/>
+<http://akfquiz.nongnu.org/>
 .br
 URI:next.html
 .br
 image:URI:next.png
 .br
-<mailto:akfquiz@akfoerster.de>
+<mailto:akfquiz-users@nongnu.org>
 .br
 telnet://akf@akfoerster.de/
 .br
